background banner was not visible,trying to fix it

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ main {
 }
 /* start of banner1 */
 .banner1 {
-    background: url("/images/banner-1.jpg") no-repeat center/cover;
+    background: url(/images/banner-1.jpg) no-repeat center/cover;
     width: 100%;
     height:25rem ;
 }
